test/cli/test-cel-http-file/context.yaml
apiVersion: cli.kyverno.io/v1alpha1
kind: Context
metadata:
  name: cel-http-file-test
spec:
  http:
  - method: GET
    url: http://external-api.example.com/v1/validate
    status: 200
    headers:
      Content-Type: application/json
    bodyFile: api-response.json
